Added Code for CamelCase Splitter

--- a/codewar_solution_part1.ipynb
+++ b/codewar_solution_part1.ipynb
@@ -606,6 +606,44 @@
     "    else:\n",
     "        return False\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Camel Case Split   \n",
+    " - Given a Text in form \"CamelCaseText\".\n",
+    " - Popular format used in hashtags.\n",
+    " - Write a code to split the hashtag and return string.\n",
+    " "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "In Whole Wide World\n",
+      "People Are Amazing\n"
+     ]
+    }
+   ],
+   "source": [
+    "import re\n",
+    "\n",
+    "def splitter(identifier):\n",
+    "    return \" \".join(re.split(\"(\\d+)\",identifier))\n",
+    "\n",
+    "def camel_case_split(identifier):\n",
+    "    matches = re.finditer('.+?(?:(?<=[a-z])(?=[A-Z])|(?<=[A-Z])(?=[A-Z][a-z])|$)', identifier)\n",
+    "    return \" \".join([splitter(m.group(0)) for m in matches])\n",
+    "for i in ['InWholeWideWorld', 'PeopleAreAmazing']:\n",
+    "    print('{}'.format(camel_case_split(i)))"
+   ]
   }
  ],
  "metadata": {
